2007-10-26  Juanma Barranquero  <lekktu@gmail.com>

	* frame.c (syms_of_frame) <delete-frame-functions>:
	Fix typo in docstring.

2007-10-25  Juanma Barranquero  <lekktu@gmail.com>

	* w32.c (init_environment): Fix tiny memory leak.
	(w32_get_resource): Remove unused variable `ok'.

2007-10-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	Make `window-system' into a keyboard-local variable (rather than
	frame-local as done originally by multi-tty).

	* keyboard.h (struct kboard): Add Vwindow_system.
	* keyboard.c (init_kboard): Set a default for Vwindow_system.
	(mark_kboards): Mark Vwindow_system.

	* dispnew.c (syms_of_display) <window-system>: Declare terminal-local.
	(init_display): Don't set the obsolete `window-system' frame-param.

	* xterm.c (x_term_init):
	* w32term.c (w32_create_terminal):
	* term.c (init_tty): Set Vwindow_system.
	* macterm.c (mac_create_terminal): Set a keyboard (missing piece of the
	multi-tty merge maybe?), copied from w32term.c.  Set Vwindow_system.

	* xfns.c (Fx_create_frame, x_create_tip_frame):
	* w32fns.c (Fx_create_frame, x_create_tip_frame):
	* macfns.c (Fx_create_frame):
	Don't set the obsolete `window-system' frame-param.

	* frame.h (Qwindow_system): Remove.
	* frame.c (Qwindow_system): Remove.  In `syms_of_frame' as well.
	(Fmake_terminal_frame): Don't set obsolete `window-system' frame-param.

2007-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* process.c (unwind_request_sigio): Only define if __ultrix__.

	* callproc.c (child_setup): Remove spurious *.

	* lisp.h (Fget_text_property): Declare.
	(have_menus_p): Declare it here rather than in sys-dep header files.
	* macterm.h (have_menus_p):
	* msdos.h (have_menus_p):
	* xterm.h (have_menus_p): Remove.

	* data.c (Fmake_variable_buffer_local, Fmake_local_variable)
	(Fmake_variable_frame_local): Just check the variable's const-ness
	rather than checking nil or t.

2007-10-22  Jason Rumney  <jasonr@gnu.org>

	* w32fns.c: Include math.h.